Hasta la clase 30

--- a/asincronismo.html
+++ b/asincronismo.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Asincronismo en JS</title>
 </head>
 <body>
-    <script src="clase19a30.js"></script>
+    <script  src="asincronismo.js" ></script>
 </body>
 </html>
