--- a/asincronismo.html
+++ b/asincronismo.html
@@ -5,6 +5,12 @@
     <title>Asincronismo en JS</title>
 </head>
 <body>
+    <!-- Para llamar a jquery -->
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+  <!-- *** -->
     <script  src="asincronismo.js" ></script>
 </body>
 </html>
