--- a/Juego/simos.html
+++ b/Juego/simos.html
@@ -8,32 +8,137 @@
   </head>
   <body>
     <div class="gameboard">
-      <div id="celeste" class="color celeste left" data-color="celeste"></div>
+      <!-- data-algo="valor" agrega en target->dataset  algo: "valor"
+           útil para saber sobre qué fue el click -->
+
+      <div id="celeste" class="color celeste left" data-color="celeste" data-hola="mundo"></div>
       <div id="violeta" class="color violeta right" data-color="violeta"></div>
       <div id="naranja" class="color naranja left" data-color="naranja"></div>
       <div id="verde" class="color verde right" data-color="verde"></div>
       <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
     </div>
     <script>
-      const celeste = document.getElementById('celeste')
-      const violeta = document.getElementById('violeta')
-      const naranja = document.getElementById('naranja')
-      const verde = document.getElementById('verde')
-      const btnEmpezar = document.getElementById('btnEmpezar')
 
-      class Juego {
-        constructor() {
-          this.inicializar()
+        /** 
+         * Todos los elementos de html se pueden usar en javascript
+         * Para acceder a un elemento html, pasar el id como parámetro
+         * 
+        */
+        //Elementos del dom
+        const celeste = document.getElementById('celeste')
+        const naranja = document.getElementById('naranja')
+        const violeta = document.getElementById('violeta')
+        const verde = document.getElementById('verde')
+        const btnEmpezar = document.getElementById('btnEmpezar')
+
+
+        class Juego{
+            //En una clase, ningún atributo se declara
+            constructor() {
+                this.inicializar()
+                this.generarSecuencia()
+                this.siguienteNivel()
+            }
+
+            inicializar() {//obitene y oculta el botón empezar
+                btnEmpezar.classList.add('hide') //Agrega la clase hide al botón
+                this.nivel = 7
+                this.colores = {
+                    //celeste: celeste, -> Es lo mismo 
+                    //    si el atributo tiene el mismo nombre que el valor
+                    celeste,
+                    naranja,
+                    violeta,
+                    verde
+                }
+                this.elegirColor = this.elegirColor.bind(this)
+            }
+
+            generarSecuencia() {//Los array empiezan sin atributos índice, por eso llenarlos
+                //Math.random() -> genera númeross entre 0 y 1
+                this.secuencia = new Array(10).fill(0).map(n => Math.floor(Math.random()*4))
+                //Un color -> un número
+            }
+
+            siguienteNivel() {
+              //Así cada vez que pasa de nivel, subnivel se setea a 0
+              this.subnivel = 0
+              this.iluminarSecuencia()
+              this.agregarEventosonClick()
+            }
+
+            transformarNumeroEnColor(numero) {
+                switch(numero) {
+                  case 0: return 'celeste'
+                  case 1: return 'naranja'
+                  case 2: return 'violeta'
+                  case 3: return 'verde'
+                }
+            }
+
+            transformarColorEnNumero(numero) {
+                switch(numero) {
+                  case 'celeste': return 0
+                  case 'naranja': return 1
+                  case 'violeta': return 2
+                  case 'verde': return 3
+                }
+            }
+
+            iluminarColor(color) {
+                this.colores[color].classList.add('light')
+                //Acceso a un atributo
+                //Color debe ser string (nombre atributo)
+                setTimeout(() => this.apagarColor(color), 350)
+            }
+
+            apagarColor(color) {
+              this.colores[color].classList.remove('light')
+            }
+
+            iluminarSecuencia() {
+              for(let i = 0; i < this.nivel; i++) {
+                //No usar var en un for, usar let
+                //con var, todas las llamadas asíncronas de setTimeout unsa el valor final de i
+                //porque esas llamadas se resuelven cuando el for termina
+                //con let, las llamadas asíncronas se "llevan" el valor de i en el momento en que
+                //fueron a la cola de callbacks
+                let color = this.transformarNumeroEnColor(this.secuencia[i])
+                setTimeout(() => this.iluminarColor(color), 1000 * i)
+              }
+            }
+
+            agregarEventosonClick() {
+              //JS le indica al navegador
+              //Son funiones asíncronas
+              //addEventListener -> Manejador de evento
+              //                 -> Cambia THIS por el elemento que está escuchando el evento
+              //                 -> Hay que "fijar" el this a juego con bind()
+              //                 -> this.elegirColor.bind(this)
+              //                 -> se puede hacer de forma general en inicializar()
+              this.colores.celeste.addEventListener('click', this.elegirColor)
+              this.colores.naranja.addEventListener('click', this.elegirColor)
+              this.colores.violeta.addEventListener('click', this.elegirColor)
+              this.colores.verde.addEventListener('click', this.elegirColor)
+            }
+
+            //ev -> nombre por convención
+            elegirColor(ev) {
+              //Obtenemos el valor del atributo color en el dataset
+              const nombreColor = ev.target.dataset.color
+              const numeroColor = this.transformarColorEnNumero(nombreColor)
+              this.iluminarColor(nombreColor)
+
+              //THIS es quien ejecuta la función
+
+            }
         }
 
-        inicializar() {
-          btnEmpezar.classList.add('hide')
+        function empezarJuego() {//Se llama  on click
+            //alert('Empieza el juego')
+            //Agrego la variable a window para debuggear
+            window.juego = new Juego()
         }
-      }
-
-      function empezarJuego() {
-        var juego = new Juego()
-      }
     </script>
   </body>
 </html>
